--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <div class="timer">
+            <!--<h2>До Нового года осталось</h2>-->
+            <!--<h2>Распродажа закончится через</h2>-->
+            <h2>Пробная версия закончится через</h2>
             <div class="timer__items">
               <div class="timer__item timer__days">00</div>
               <div class="timer__item timer__hours">00</div>
